--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
     color:#4FA3FF;
     font-weight:bold;
     letter-spacing:1px;
-    border-bottom:1px solid #4FA3FF;;
+    border-bottom:1px solid #4FA3FF;
 }
 
 .nav-class{
@@ -49,6 +49,7 @@
     letter-spacing:1.3px;
     color:white;
     font-family: 'Roboto', sans-serif;
+    cursor: pointer;
 }
 .Movie-Navbar .Title .Part2{
     color:#4FA3FF;
